--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
 a {
   font-weight: 500;
   color: #646cff;
